Upload: template.conf

--- a/template.conf
+++ b/template.conf
@@ -6,6 +6,10 @@
     "default" : {
       "name" : "Default",
       "regions" : [ "site" ]
+    },
+    "premiumproduct" : {
+      "name" : "Premium Product",
+      "regions" : [ "site" ]
     }
   },
   
