Upload: template.conf

--- a/template.conf
+++ b/template.conf
@@ -9,7 +9,7 @@
     },
     "premiumproduct" : {
       "name" : "Premium Product",
-      "regions" : [ "site" ]
+      "regions" : [ "premium" ]
     }
   },
   
